--- a/hoyolab_wider.user.css
+++ b/hoyolab_wider.user.css
@@ -1,11 +1,16 @@
+/* ==UserStyle==
+@name           HoYoLAB Wider
+@description    A new userstyle
+@namespace      userstyles.world/user/breat
+@version        1.00
+@author         BreatFR
+@homepageURL    https://github.com/breatfr/HoYoLAB-Wider
+@supportURL     https://www.hoyolab.com/article/23010773
+@updateURL      https://raw.githubusercontent.com/breatfr/HoYoLAB-Wider/main/hoyolab_wider.user.css
+@license        GPL-3.0-or-later; http://www.gnu.org/licenses/gpl-3.0.txt
+==/UserStyle== */
+
 /* === Credits ===
-Created by  BreatFR
-Creatied on 2023/11/15
-Version     1.0
-@description    HoYoLAB website now love much more wide screens
-Changelog   https://www.hoyolab.com/article/23010773
-@namespace    userstyles.world/user/breat
-@license    GNU GPL v3
 Website     https://breat.fr
 facebook    https://www.facebook.com/breatfroff
 mastodon    https://mastodon.social/@breat_fr
@@ -13,127 +18,128 @@ telegram    https://t.me/+5ZLC2qntf6xmYmI0
 vk          https://vk.com/breatfroff
 X (twitter) https://x.com/breatfroff
 === Credits === */
+@-moz-document domain("hoyolab.com") {
+    ::-webkit-scrollbar {
+      width: 5px !important;
+    }
 
-::-webkit-scrollbar {
-  width: 5px !important;
-}
+    ::-webkit-scrollbar:horizontal {
+        height: 5px !important;
+    }
 
-::-webkit-scrollbar:horizontal {
-    height: 5px !important;
-}
+    ::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 5px grey !important;
+        border-radius: 20px !important;
+        color-scheme: dark !important;
+    }
 
-::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey !important;
-    border-radius: 20px !important;
-    color-scheme: dark !important;
-}
+    ::-webkit-scrollbar-thumb {
+        box-shadow: inset 0 0 5px grey !important;
+        border-radius: 20px !important;
+    }
 
-::-webkit-scrollbar-thumb {
-    box-shadow: inset 0 0 5px grey !important;
-    border-radius: 20px !important;
-}
+    ::-webkit-scrollbar-thumb:hover {
+        background: white !important;
+    }
 
-::-webkit-scrollbar-thumb:hover {
-    background: white !important;
-}
+    * {
+        scrollbar-color: grey white !important;
+        scrollbar-width: thin !important;
+    }
 
-* {
-    scrollbar-color: grey white !important;
-    scrollbar-width: thin !important;
-}
+    #anchor_spiral_abyss > div.container,
+    body > div.pc-root-layout > div.pc-root-layout__container > div > div {
+        max-width: 100% !important;
+    }
 
-#anchor_spiral_abyss > div.container,
-body > div.pc-root-layout > div.pc-root-layout__container > div > div {
-    max-width: 100% !important;
-}
+    .root-page-container__content {
+        max-width: 100% !important;
+    }
 
-.root-page-container__content {
-    max-width: 100% !important;
-}
+    .mhy-article-card__cover img {
+        max-height: 100% !important;
+    }
 
-.mhy-article-card__cover img {
-    max-height: 100% !important;
-}
+    .mhy-article-card__cover {
+        left: 15% !important;
+    }
 
-.mhy-article-card__cover {
-    left: 15% !important;
-}
+    .mhy-article-card__img {
+        left: 25% !important;
+    }
 
-.mhy-article-card__img {
-    left: 25% !important;
-}
+    .mhy-article-card__video {
+        left: 20% !important;
+    }
 
-.mhy-article-card__video {
-    left: 20% !important;
-}
+    .root-page-container__left {
+        margin-left: 10px;
+        max-width: 100% !important;
+    }
 
-.root-page-container__left {
-    margin-left: 10px;
-    max-width: 100% !important;
-}
+    .root-page-container__right {
+        margin-right: 10px;
+    }
 
-.root-page-container__right {
-    margin-right: 10px;
-}
+    body > div.app-root > div > div.scroll-container.main-wrapper > div,
+    body > div.app-root > div > div.scroll-container.main-wrapper > div > div.page-body.body {
+        border-radius: 16px !important;
+        width: 100% !important;
+    }
 
-body > div.app-root > div > div.scroll-container.main-wrapper > div,
-body > div.app-root > div > div.scroll-container.main-wrapper > div > div.page-body.body {
-    border-radius: 16px !important;
-    width: 100% !important;
-}
+    .pc-root-layout__container {
+        max-width: 100% !important;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
 
-.pc-root-layout__container {
-    max-width: 100% !important;
-    padding-left: 10px;
-    padding-right: 10px;
-}
+    #anchor_character > div.pc-swiper-block-layout__content > div.container {
+        width: 50% !important;
+    }
 
-#anchor_character > div.pc-swiper-block-layout__content > div.container {
-    width: 50% !important;
-}
+    #anchor_character > div.pc-swiper-block-layout__content > div.pc-role-container {
+        height: 450px !important;
+    }
 
-#anchor_character > div.pc-swiper-block-layout__content > div.pc-role-container {
-    height: 450px !important;
-}
+    .rpg-role-detail {
+        height: 450px !important;
+        left: 110% !important;
+        position: absolute !important;
+        top: 0px !important;
+    }
 
-.rpg-role-detail {
-    height: 450px !important;
-    left: 110% !important;
-    position: absolute !important;
-    top: 0px !important;
-}
+    .hsr-rtn-container {
+        margin-left: 25% !important;
+    }
 
-.hsr-rtn-container {
-    margin-left: 25% !important;
-}
+    .article-menu-fix-layout {
+        margin-left: 10px !important;
+    }
 
-.article-menu-fix-layout {
-    margin-left: 10px !important;
-}
+    .hsr-rtn-btm {
+        margin-left: 1.2% !important;
+    }
 
-.hsr-rtn-btm {
-    margin-left: 1.2% !important;
-}
+    .activity-header.mb-2.flex.items-center {
+        margin-left: -47.5% !important;
+    }
 
-.activity-header.mb-2.flex.items-center {
-    margin-left: -47.5% !important;
-}
+    .activity-header.mb-2.flex.items-center > div {
+        margin-left: 32.5% !important;
+    }
 
-.activity-header.mb-2.flex.items-center > div {
-    margin-left: 32.5% !important;
-}
+    .world-exploration > div {
+        max-width: 100% !important;
+    }
 
-.world-exploration > div {
-    max-width: 100% !important;
-}
+    .hsr-home-main,
+    .hsr-home-main-container,
+    .pc-home-banner {
+        margin-left: 5px;
+        width: calc(100% - 60px) !important;
+    }
 
-.hsr-home-main,
-.hsr-home-main-container,
-.pc-home-banner {
-    margin-left: 5px;
-    width: calc(100% - 60px) !important;
-}
-
-.menu-outline {
-    right: 0px !important;
+    .menu-outline {
+        right: 0px !important;
+    }
 }
